# bioview-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bioview_server/: server.py  server_v2.py
bioview_server/callbacks/: __init__.py  signals.py
bioview_server/common/: __init__.py  display.py  instructions.py  save.py
bioview_server/constants/: __init__.py  backend.py  device.py  protocol.py  status.py  version.py
bioview_server/datatypes/: __init__.py  backend.py  configuration.py  device.py  protocol.py
bioview_server/device/: __init__.py  device.py
bioview_server/device/biopac/: __init__.py  acquire.py  backend.py  config.py  connect.py  constants.py  device.py  process.py  receive.py  utils.py
bioview_server/device/dummy/: __init__.py  backend.py  rf_simulation.py  rf_worker.py
bioview_server/device/usrp/: __init__.py  backend.py  commands.py  config.py  connect.py  device.py  process.py  receive.py  transmit.py  utils.py
bioview_server/utils/: __init__.py  authentication.py  console.py  io.py  ipc.py  network.py  preprocess.py
src/bioview_server/: server.py
src/bioview_server/common/: __init__.py  display.py  save.py
src/bioview_server/datatypes/: __init__.py  backend.py
src/bioview_server/device/: __init__.py
src/bioview_server/device/biopac/: __init__.py  config.py  constants.py  utils.py
src/bioview_server/device/usrp/: __init__.py  commands.py  receive.py
src/bioview_server/utils/: __init__.py  io.py  network.py
tests/: conftest.py  test_biopac_utils.py  test_connect_devices_behavior.py  test_device_ops_async.py  test_discover_devices.py  test_dummy_rf.py  test_e2e_dummy_rf.py  test_e2e_dummy_streaming.py  test_integration_helpers.py  test_server_helpers.py
