[project]
name = "bioview-server"
version = "0.9.3.6"
description = "Cross-platform backend providing core functionality for headless and networked clients"
authors = [
    {name = "Aakash Kapoor",email = "113218196+meowkash@users.noreply.github.com"}
]
license = {text = "GPL-v3"}
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "scipy (>=1.16.1,<2.0.0)"
]

[project.scripts]
bioview-server = "bioview_server.server:main"

[project.optional-dependencies]
uhd = [
    "uhd ; platform_system == 'Windows'"
]
biopac = [
    "wmi ; platform_system == 'Windows'"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.12.8"
pytest = "^8.4.1"
numpy = ">=1.26"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 89
target-version = "py38"
extend-exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv"
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
# Plus isort (`I`) for import sorting
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C90"]
ignore = [
    "E203",  # whitespace before ':'
    "C901" # TODO: Remove after validating everything works
]

# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["your_package"]  # Replace with your actual package name
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"
# Like Black, indent with spaces, rather than tabs
indent-style = "space"
# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending
line-ending = "auto"
